--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,28 @@
 {
-	"name"             : "icewind/streams",
-	"description"      : "A set of generic stream wrappers",
-	"license"          : "MIT",
-	"authors"          : [
+	"name": "icewind/streams",
+	"description": "A set of generic stream wrappers",
+	"license": "MIT",
+	"authors": [
 		{
-			"name" : "Robin Appelman",
+			"name": "Robin Appelman",
 			"email": "icewind@owncloud.com"
 		}
 	],
-	"require"          : {
+	"require": {
 		"php": ">=5.6"
 	},
-	"require-dev"      : {
+	"require-dev": {
 		"php-coveralls/php-coveralls": "v2.1.0",
 		"phpunit/phpunit": "^5.7"
 	},
-	"autoload"         : {
+	"autoload": {
 		"psr-4": {
-			"Icewind\\Streams\\Tests\\": "tests/",
 			"Icewind\\Streams\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Icewind\\Streams\\Tests\\": "tests/"
 		}
 	}
 }
