--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,12 +37,19 @@ jobs:
     runs-on: ubuntu-20.04
     name: Unit tests
 
+    strategy:
+      matrix:
+        php-version:
+          - "7.3"
+          - "7.4"
+          - "8.0"
+
     steps:
       - uses: actions/checkout@v2
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: "${{ matrix.php-version }}"
           coverage: pcov
       - name: Composer
         run: composer install
