--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2021 Robin Appelman <robin@icewind.nl>
+# SPDX-License-Identifier: MIT
 on: [push, pull_request]
 
 name: CI
